--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
 [metadata]
-name = data_analysus
+name = data_analysis
 author = Debora Amorim
 
 [options]
 install_requires =
     pandas
-    numpy
+    scikit-learn
+    numpy >= 1.14.6
     matplotlib
