env: add libraries

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,9 @@ install_requires =
     scikit-learn
     numpy >= 1.14.6
     matplotlib
+    ipywidgets
+    IPython
+    graphviz
+    pydotplus
+    pydot
+    seaborn
